# rgw-admin

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
rgw_admin/: __init__.py  fields.py  schema.py  serialization.py
src/rgw_admin/: __init__.py  fields.py  schema.py  serialization.py
tests/: test_admin_client.py
