[project]
name = "rgw_admin"
description = "RGW Admin access Python API"
version = "0.1.0"

requires-python = ">= 3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "botocore>=1.5.77",
    "requests>=2.20.0",
]

[[project.authors]]
name = "cloudscale.ch"
email = "info@cloudscale.ch"

[project.urls]
Homepage = "https://github.com/cloudscale-ch/rgw-admin"

[project.optional-dependencies]
dev = []

[tool.black]
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"
force_single_line = true
